--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
           <h3>Be connected to your home. Anywhere. </h3>
         </div>
         <div class="push-03">
-          <img class="appstore" src="images/appstorebadge.png">
-          <img class="appstore" src="images/googleplaybadge.png">
+          <img class="appstore" src="appstorebadge.png">
+          <img class="appstore" src="googleplaybadge.png">
         </div>
       </header>
 
       <div class="feature1">
           <h2 class="upper_left_text">Reliable home emergency alerts.</h2>
           <h3 class="right_text">Start resolving or ignore the alert</h3>
-          <img class="phone1" src="images/iphone_alerts.png"> </img>
+          <img class="phone1" src="iphone_alerts.png"> </img>
           <h3 class="left_text">Immediately know what kind of issue, and take action right from iOS alerts</h3>
       </div>
 
       <div class="feature2">
           <h2 class="upper_left_text">Instantly text or call for help with home emergencies</h2>
           <h3 class="right_text">Jump to texting or calling with family, friends, service providers or 911.</h3>
-          <img class="phone2" src="images/iPhone_text_call.png"></img>
+          <img class="phone2" src="iPhone_text_call.png"></img>
           <h3 class="left_text">Know about and resolve serious issues while you're away.
             Fast.</h3>
       </div>
@@ -40,14 +40,14 @@
       <div class="feature3">
           <h2 class="upper_left_text">HomeCheck group text with preset contacts</h2>
           <h3 class="right_text">Instantly talk with family and start taking action from anywhere.</h3>
-          <img class="phone3" src="images/iPhone_grouptext.png"></img>
+          <img class="phone3" src="iPhone_grouptext.png"></img>
           <h3 class="left_text">HomeCheck. Problem Solved.</h3>
       </div>
 
       <div class="feature4">
             <h2 class="upper_left_text">3D touch to call service providers</h2>
             <h3 class="right_text">Link directly to your Angie's List contacts, ServPro via API and more!</h3>
-            <img class="phone4" src="images/iPhone_3dtouch.png"></img>
+            <img class="phone4" src="iPhone_3dtouch.png"></img>
             <h3 class="left_text">Take advantage of iPhone 3D touch sensor.</h3>
       </div>
 
@@ -55,8 +55,8 @@
           <h2>HomeCheck</h2>
           <h3>Home. Connected. Secure. Anywhere.</h3>
         <center>
-          <img class="appstore" src="images/appstorebadge.png">
-          <img class="appstore" src="images/googleplaybadge.png">
+          <img class="appstore" src="appstorebadge.png">
+          <img class="appstore" src="googleplaybadge.png">
         </center>
       </div>
 
